<resources>
    <string name="app_name">Mandiri Panganku</string>
    <string name="image">image</string>
    <string name="welcome">Selamat datang</string>
    <string name="accept">Dengan mendaftar anda meyetujui</string>
    <string name="policy"><![CDATA[Ketentuan & Kebijakan Kami]]></string>
    <string name="login">Masuk</string>
    <string name="number">Nomor KK</string>
    <string name="password">Password</string>
    <string name="sign_up">Daftar</string>
    <string name="dont_have_account">Belum Punya Akun?</string>
    <string name="or">ATAU</string>
    <string name="forget">Lupa Password?</string>
    <string name="page_two">Page Two</string>
    <string name="halo">Halo,</string>
    <string name="kk_zinan_kats">KK Zinan Kats</string>
    <string name="notification">notification</string>
    <string name="profile">profile</string>
    <string name="timeline">timeline</string>
    <string name="how_your_plant">GIMANA KABAR\nTANAMANMU HARI INI?</string>
    <string name="cari">"     Cari"</string>
    <string name="fishing">fishing</string>
    <string name="farming">farming</string>
    <string name="agriculture">agriculture</string>
    <string name="dashboard">Dashboard</string>
    <string name="community">Komunitas</string>
    <string name="search">Pencarian</string>
    <string name="report">Laporan</string>
    <string name="profiles">Profil</string>
    <string name="home">home</string>
    <string name="report_food">Laporan Panganku</string>
    <string name="already_have_account">Sudah Punya Akun?</string>
    <string name="family_member">Jumlah Anggota Keluarga</string>
    <string name="family_name">Nama Kepala Keluarga</string>
    <string name="no_handphone">No Handphone</string>
    <string name="create_password">Buat Password</string>
    <string name="confirm_password">Ketik Ulang Password</string>
    <string name="next">Lanjut</string>
    <string name="back">back</string>
    <string name="profil">Profil</string>
    <string name="profile_picture">profile picture</string>
    <string name="camera">camera</string>
    <string name="family_head">Nama Kepala Keluarga</string>
    <string name="zinan_kats">Zinan Kats</string>
    <string name="exit">Keluar</string>
    <string name="_4">4</string>
    <string name="_0813_2525_8349">0813–2525–8349</string>
    <string name="report_check">Laporan Ini Benar</string>
    <string name="date">Tanggal</string>
    <string name="report_type">Jenis Mandiri Pangan</string>
    <string name="report_note">Catatan</string>
    <string name="report_head">Nama Kepala Keluarga</string>
    <string name="lapor">Lapor</string>
    <string name="joko_pranowo">Joko Pranowo</string>
    <string name="pemimpin_mana_yang_menyakitimu">Pemimpin mana yang menyakitimu!</string>
    <string name="agriculture_title">Pertanian</string>
    <string name="report_title">Laporan Terpadu</string>
    <string name="write_something">Tulis Sesuatu</string>
    <string name="fishery_title">Perikanan</string>
    <string name="livestock_project">Peternakan</string>
    <string name="my_agriculture">Tanaman Panganku</string>
    <string name="choose_your_plant">Pilih tanaman anda</string>
    <string name="jumlah_tanaman">Jumlah tanaman</string>
    <string name="jumlah_bibit">Jumlah Bibit</string>
    <string name="input_bibit">Masukkan jumlah bibit</string>
    <string name="tanggal_tanam">Tanggal tanam</string>
    <string name="masukkan_tanggal_tanam">Masukkan tanggal tanam</string>
    <string name="save">Simpan</string>
    <string name="photo">Lampiran Foto (opsional)</string>
    <string name="tambah_tanaman">Tambah Tanaman</string>
    <string name="tanaman_anda">Tanaman Anda</string>
    <string name="tambah_perikanan">Tambah Perikanan</string>
    <string name="perikanan_anda">Perikanan Anda</string>
    <string name="add">add</string>
    <string name="tambah_peternakan">Tambah Peternakan</string>
    <string name="peternakan_anda">Peternakan Anda</string>
    <string name="pertanianku">Pertanianku</string>
    <string name="perikananku">Perikananku</string>
    <string name="jumlah_ternak">Jumlah ternak</string>
    <string name="pilih_ternak_anda">Pilih ternak anda</string>
    <string name="tanggal_mulai">Tanggal mulai</string>
    <string name="pilih_ikan_anda">Pilih ikan anda</string>
    <string name="peternakanku">Peternakanku</string>
    <string name="lele">LELE</string>
    <string name="description">description</string>
    <string name="panduan_perawatan">Panduan Perawatan</string>
    <string name="bawal">BAWAL</string>
    <string name="gurameh">GURAME</string>

    <string name="tomat">TOMAT</string>
    <string name="kentang">KENTANG</string>
    <string name="bayam">BAYAM</string>

    <string name="ayam">AYAM</string>
    <string name="kambing">KAMBING</string>
    <string name="bebek">BEBEK</string>

    <string name="panduan_perawatan_bayam">Perawatan Bayam</string>
    <string name="panduan_perawatan_tomat">Perawatan Tomat</string>
    <string name="panduan_perawatan_kentang">Perawatan Kentang</string>

    <string name="panduan_perawatan_lele">Perawatan Lele</string>
    <string name="panduan_perawatan_bawal">Perawatan Bawal</string>
    <string name="panduan_perawatan_gurame">Perawatan Gurame</string>

    <string name="panduan_perawatan_ayam">Perawatan Ayam</string>
    <string name="panduan_perawatan_bebek">Perawatan Bebek</string>
    <string name="panduan_perawatan_kambing">Perawatan Kambing</string>
    <string name="keluarga_tidak_ditemukan">Keluarga tidak ditemukan</string>
    <string name="pilih_foto">Pilih Foto</string>
    <string name="foto_ternak_txt">foto ternak</string>
    <string name="nama_ternak">Nama Ternak</string>
    <string name="nama_tanaman">Nama Tanaman</string>
    <string name="nama_ikan">Nama Ikan</string>
    <string name="masukkan_jumlah_ternak">Masukkan jumlah ternak</string>
    <string name="masukkan_tanggal_mulai">Masukkan tanggal mulai</string>
    <string name="masukkan_jumlah_bibit">Masukkan jumlah bibit</string>
    <string name="delete">Hapus</string>
    <string name="masukkan_jumlah_tanaman">Masukkan jumlah tanaman</string>
    <string name="hapus_foto">Hapus Foto</string>
    <string name="isi">:</string>
    <string name="tanggal_update">Tanggal Update</string>
    <string name="hapusfoto">Hapus Foto</string>
    <string name="send">kirim pesan</string>

    <string-array name="dropdown_pertanian">
        <item>Kentang</item>
        <item>Bayam</item>
        <item>Tomat</item>
    </string-array>

    <string-array name="dropdown_peternakan">
        <item>Ayam</item>
        <item>Kambing</item>
        <item>Bebek</item>
    </string-array>

    <string-array name="dropdown_perikanan">
        <item>Lele</item>
        <item>Bawal</item>
        <item>Gurameh</item>
    </string-array>

</resources>