<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF2E1"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/abhaya_semi"
                android:text="@string/already_have_account"
                android:textAlignment="center"
                android:textColor="#3E6D41"
                android:textSize="18sp" />

            <View
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/login"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/abhaya_semi"
                android:text="@string/login"
                android:textColor="#3E6D41"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        </LinearLayout>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/image"
            android:src="@drawable/picture_one" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/abhaya_extra"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/policy"
            android:textAlignment="center"
            android:textColor="#0386D0"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/number"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/family"
            android:hint="@string/number"
            android:inputType="number"
            android:padding="10dp"
            tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/lock"
            android:hint="@string/family_name"
            android:inputType="text"
            android:padding="10dp"
            tools:ignore="Autofill,TextContrastCheck,TextFields,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/family"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/lock"
            android:hint="@string/family_member"
            android:inputType="number"
            android:padding="10dp"
            tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/lock"
            android:hint="@string/no_handphone"
            android:padding="10dp"
            android:inputType="number"
            tools:ignore="Autofill,TextContrastCheck,TextFields,TouchTargetSizeCheck" />



        <View
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/signup"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#F5B623"
            android:fontFamily="@font/abhaya_semi"
            android:text="@string/next"
            android:textSize="22sp"
            tools:ignore="TextContrastCheck" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>