<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF2E1"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/profile"
                android:padding="16dp"
                android:src="@drawable/profile_empty" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/halo"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kk_zinan_kats"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/notification"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/notification"
                android:src="@drawable/notif" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="218dp">

            <ImageView
                android:id="@+id/timeline"
                android:layout_width="match_parent"
                android:layout_height="156dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/timeline"
                android:src="@drawable/sunflower" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:paddingStart="40dp"
                android:text="@string/how_your_plant"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/number"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="90dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_corner_background"
                android:drawableEnd="@drawable/search"
                android:elevation="8dp"
                android:hint="Cari"
                android:inputType="number"
                android:padding="10dp"
                tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_food"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingStart="40dp"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <ImageView
            android:id="@+id/pertanian"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:contentDescription="@string/agriculture"
            android:src="@drawable/agriculture"
            android:elevation="8dp"/>

        <ImageView
            android:id="@+id/peternakan"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/farming"
            android:src="@drawable/farming"
            tools:ignore="ImageContrastCheck"
            android:elevation="8dp"/>

        <ImageView
            android:id="@+id/perikanan"
            android:contentDescription="@string/fishing"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/fishing"
            android:elevation="8dp"/>


    </LinearLayout>

    <include
        android:id="@+id/bottom_navigation"
        layout="@layout/bottom_navigation" />







</androidx.constraintlayout.widget.ConstraintLayout>