<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/password"
    android:fillViewport="true"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:fontFamily="@font/abhaya_semi"
                android:text="@string/already_have_account"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="@dimen/_15ssp" />

            <View
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/login"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/abhaya_semi"
                android:text="@string/login"
                android:textColor="@color/text"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintButtonSize" />

        </LinearLayout>



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/image"
            android:src="@drawable/picture_one" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/abhaya_extra"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:textAlignment="center"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_35sdp"
            android:text="@string/policy"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12sdp"
            tools:ignore="TextContrastCheck,TextSizeCheck" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@color/white"
            android:drawableEnd="@drawable/family"
            android:hint="@string/create_password"
            android:inputType="text"
            android:padding="@dimen/_12sdp"
            tools:ignore="Autofill,TextContrastCheck,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/password_confirm"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@color/white"
            android:drawableEnd="@drawable/lock"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/_12sdp"
            tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp" />

        <Button
            android:id="@+id/signup"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_40sdp"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/abhaya_semi"
            android:text="@string/sign_up"
            android:textSize="@dimen/_18ssp"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />


    </LinearLayout>


</ScrollView>




