<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@drawable/bottom_nav_background"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/dashboard"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/dashboard"
            android:src="@drawable/ic_home"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/community"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/community"
            android:src="@drawable/ic_community"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_search"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/report"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/report"
            android:src="@drawable/ic_report"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/profile"
            android:src="@drawable/ic_profile"
            tools:ignore="ImageContrastCheck" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>