<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/farmlist">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/main_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_60sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tambah_peternakan"
                android:textSize="@dimen/_16ssp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:fontFamily="@font/abhaya_extra" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp" >

                <View
                    android:id="@+id/add"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_not_so_round" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/add"
                    android:src="@drawable/add_photo"
                    tools:ignore="ImageContrastCheck" />

            </FrameLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peternakan_anda"
                android:textSize="@dimen/_16ssp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:fontFamily="@font/abhaya_extra" />

            <!-- RecyclerView untuk menampilkan daftar proyek peternakan -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="true" />

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/top_bar"
        layout="@layout/top_bar" />

    <include
        android:id="@+id/bottom_navigation"
        layout="@layout/bottom_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>